# mogli.app

./: .env.example  .gitignore  .tabnineignore  README.md  TABNINE.md  eslint.config.js  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: mogly-design.md  mogly-ui-reference.jsx
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: keychain.rs  lib.rs  main.rs  models.rs  notify.rs  reminders.rs  store.rs  sync.rs
src-tauri/src/commands/: auth.rs  calendar.rs  gmail.rs  mod.rs  notification.rs
src-tauri/src/google/: calendar.rs  gmail.rs  mod.rs  oauth.rs
src-tauri/src/tests/: mod.rs
src/__tests__/: AuthExpiredBanner.test.tsx  CalendarList.test.tsx  CalendarView.test.tsx  ComposeModal.test.tsx  EmailDetail.test.tsx  EmailList.test.tsx  EventModal.test.tsx  MailView.test.tsx  MiniCal.test.tsx  NotificationBanner.test.tsx  ReminderPopup.test.tsx  Sidebar.test.tsx  TopBar.test.tsx  WelcomePage.test.tsx  setup.test.ts  testSetup.ts  theme.test.ts  uiStore.test.ts
src/components/: AuthExpiredBanner.module.css  AuthExpiredBanner.tsx  AvailabilityPanel.module.css  AvailabilityPanel.tsx  CalendarList.module.css  CalendarList.tsx  CalendarView.module.css  CalendarView.tsx  ComposeModal.module.css  ComposeModal.tsx  EmailDetail.module.css  EmailDetail.tsx  EmailList.module.css  EmailList.tsx  EventModal.module.css  EventModal.tsx  MailView.module.css  MailView.tsx  MiniCal.module.css  MiniCal.tsx  MonthView.module.css  MonthView.tsx  ReminderPopup.tsx  (+13 more)
(+12 files in other folders)
